<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#83C3CA"
    android:padding="30dp"
    tools:context=".TotalHarga">

    <TextView
        android:id="@+id/tvnamapembeli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textColor="#C2185B"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvtipepelanggan"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tipe_pelanggan"
        android:textColor="#C2185B"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvtransaksihariini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaksi_hari_ini"
        android:textColor="#C2185B"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvItemDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_barang"
        android:textColor="#C2185B"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvItemCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kode_barang"
        android:textColor="#C2185B"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#C2185B"
        android:text="@string/nama_barang"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#C2185B"
        android:text="@string/harga"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#C2185B"
        android:text="@string/total_harga"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#C2185B"
        android:text="@string/diskon_harga"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvMemberDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#C2185B"
        android:text="@string/diskon_member"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvTotalPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#C2185B"
        android:text="@string/jumlah_bayar"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvTerimakasih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#C2185B"
        android:text="@string/terima_kasih_sudah_berbelanja_disini"
        android:textSize="11sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnshare"
        android:text="@string/bagikan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#C2185B"/>



</LinearLayout>